Feature/remove etk db dependency (#131)
* remove getIcbcPaymentCode DB dependency

* move message codes to Const

* remove unused code

* Add Mongo DB integration for errors and events

* remove dependency from ETK DB

* add ICBC ping to ready check endpoint

* Send events to producer API

* update dependencies - remove unused code

* Refactor Producer API key