@@ -6,7 +6,6 @@ import bcgov.jh.etk.jhetkcommon.model.Const;
 import bcgov.jh.etk.jhetkcommon.model.PathConst;
 import bcgov.jh.etk.jhetkcommon.model.enums.EnumErrorCode;
 import bcgov.jh.etk.jhetkcommon.model.enums.EnumInterface;
-import bcgov.jh.etk.jhetkcommon.model.enums.EnumInterfaceState;
 import bcgov.jh.etk.jhetkcommon.model.enums.EnumEventType;
 import bcgov.jh.etk.jhetkcommon.model.payment.InvoiceSearchResponse_ICBC_MCOT;
 import bcgov.jh.etk.jhetkcommon.model.payment.ref.Contravention;
@@ -14,7 +13,6 @@ import bcgov.jh.etk.jhetkcommon.model.payment.ref.Vehicle;
 import bcgov.jh.etk.jhetkcommon.service.EtkRestService;
 import bcgov.jh.etk.jhetkcommon.service.impl.ErrorService;
 import bcgov.jh.etk.jhetkcommon.service.impl.EtkService;
-import bcgov.jh.etk.jhetkcommon.service.impl.WorkerService;
 import bcgov.jh.etk.jhetkcommon.util.DateUtil;
 import bcgov.jh.etk.jhetkcommon.util.EvtEnrichUtil;
 import bcgov.jh.etk.jhetkcommon.util.StringUtil;
@@ -36,10 +34,10 @@ import org.springframework.web.client.*;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.text.DecimalFormat;
 import java.text.NumberFormat;
 import java.util.ArrayList;
-import java.util.Map;
 
 import static bcgov.jh.etk.jhetkcommon.model.PathConst.PATH_PING_REQUEST;
 
@@ -49,7 +47,7 @@ import static bcgov.jh.etk.jhetkcommon.model.PathConst.PATH_PING_REQUEST;
 @RestController
 public class PaymentRestController extends BaseController {
 	/** The log. */
-	private static Logger log = LoggerFactory.getLogger(PaymentRestController.class);
+	private static final Logger log = LoggerFactory.getLogger(PaymentRestController.class);
 
 	/** The paybc individual invoice endpoint url prefix. */
 	@Value("${paybc_individual_invoice_endpoint_url_prefix}")
@@ -77,29 +75,7 @@ public class PaymentRestController extends BaseController {
 	@Autowired
 	ErrorService errorService;
 
-	/** The helper service. */
-	@Autowired
-	WorkerService helperService;
-
-    /**  Ticket number provided is not found. */
-    private final static String ICBC_PAYMENT_MESSAGE_CODE_TICKET_NO_FOUND = "101";
-
-    /** The Constant ICBC_PAYMENT_MESSAGE_CODE_ZERO_OUTSTANDING. */
-    private final static String ICBC_PAYMENT_MESSAGE_CODE_ZERO_OUTSTANDING = "102";
-
-    /** The Constant ICBC_PAYMENT_MESSAGE_CODE_TICKET_NOT_PAYABLE. */
-    private final static String ICBC_PAYMENT_MESSAGE_CODE_TICKET_NOT_PAYABLE = "103";
-
-    /** ICBC Service is Not Available. */
-    private final static String ICBC_PAYMENT_MESSAGE_CODE_SYSTEM_ERROR = "201";
-
 	private static final String PAYMENT_CONTROLLER_ICBC_INVOICE_SEARCH_HELPER = "PaymentController.icbcInvoiceSearchHelper";
-
-    @Value("${spring.application.name}")
-	private String componentName;
-
-	@Value("${pod.name}")
-	private String podName;
 
     /**
      * Home.
@@ -108,7 +84,7 @@ public class PaymentRestController extends BaseController {
      */
     @GetMapping(PATH_PING_REQUEST)
     public String home(){
-        return "{\"message\" : \"Welcome to Paymentsvc!\"}";
+        return "{\"message\" : \"Welcome to RIDE Payment SVC!\"}";
     }
 
 	/**
@@ -120,14 +96,6 @@ public class PaymentRestController extends BaseController {
 	@RequestMapping(method = RequestMethod.GET,value = PathConst.PATH_INDIVIDUAL_TICKET_QUERY_V2 + "/{id}", produces = "application/json")
 	@ResponseStatus(code = HttpStatus.OK)
 	public @ResponseBody ResponseEntity<String> individualTicketQueryToICBC(@PathVariable("id") String contraventionNum) {
-		//check the current ICBC_QT interface state, simply return 'Service not available' if it's STOPPED
-		if (helperService.isInterfaceStopped(EnumInterface.ICBC_QT)) {
-			log.debug("Ticket query interface is STOPPED, return 'Service not available'");
-			//prepare response
-			String responseString = getPaybcPaymentMessage(ICBC_PAYMENT_MESSAGE_CODE_SYSTEM_ERROR);
-			return new ResponseEntity<> (responseString, HttpStatus.SERVICE_UNAVAILABLE);
-		}
-
 		log.debug("Individual ticket query from ICBC, contraventionNum: {}", contraventionNum);
 		String ticketNum = "";
 		contraventionNum = contraventionNum.toUpperCase();
@@ -147,14 +115,6 @@ public class PaymentRestController extends BaseController {
 	@RequestMapping(method = RequestMethod.GET, value = PathConst.PATH_TICKET_QUERY_V2, produces = "application/json")
 	@ResponseStatus(code = HttpStatus.OK)
 	public @ResponseBody ResponseEntity<String> ticketQueryToICBC(@RequestParam("in") String ticketNum,@RequestParam("prn") String prn,@RequestParam("time") String time) {
-		//check the current ICBC_QT interface state, simply return 'Service not available' if it's STOPPED
-		if (helperService.isInterfaceStopped(EnumInterface.ICBC_QT)) {
-			log.debug("Ticket query interface is STOPPED, return 'Service not available'");
-			//prepare response
-			String responseString = getPaybcPaymentMessage(ICBC_PAYMENT_MESSAGE_CODE_SYSTEM_ERROR);
-			return new ResponseEntity<> (responseString, HttpStatus.SERVICE_UNAVAILABLE);
-		}
-
 		log.info("Ticket query payment svc: {}, ticketNum: {}, time: {}", EnumEventType.VT_QUERY, ticketNum, time);
 		String responseString = "";
 
@@ -162,7 +122,7 @@ public class PaymentRestController extends BaseController {
 		String validatedTime = DateUtil.validateTime(time);
 		if (validatedTime == null) {
 			log.debug("Time [{}] is invalid", time);
-			responseString = getPaybcPaymentMessage(ICBC_PAYMENT_MESSAGE_CODE_TICKET_NO_FOUND);
+			responseString = getPaymentMessage(Const.ICBC_PAYMENT_MESSAGE_CODE_TICKET_NO_FOUND);
 			return new ResponseEntity<> (responseString, HttpStatus.OK);
 		}
 
@@ -177,24 +137,14 @@ public class PaymentRestController extends BaseController {
 	 * @param time the time
 	 * @param individualInvoiceSearch the individual invoice search
 	 * @return the response entity
-	 * @throws EtkDataAccessException the etk data access exception
-	 */
+     */
 	private ResponseEntity<String> icbcInvoiceSearchHelper(String ticketNumber, final String contraventionNumber, final String time,
 			final boolean individualInvoiceSearch) {
 		HttpStatusCode responseCode = HttpStatus.OK;
 		String responseString = "";
-		try {
-			ticketNumber = URLEncoder.encode(ticketNumber, "UTF-8");
-		} catch (UnsupportedEncodingException e) {
-			String errorDetails = "Exception occurred while doing URLEncode " + ticketNumber + "; error details: " + e.toString() + "; " + e.getMessage();
-			log.error(errorDetails);
-			return new ResponseEntity<> (getPaybcPaymentMessage(ICBC_PAYMENT_MESSAGE_CODE_TICKET_NO_FOUND), HttpStatus.BAD_REQUEST);
-		}
+        ticketNumber = URLEncoder.encode(ticketNumber, StandardCharsets.UTF_8);
 
-		String url = ICBC_PAYMENT_SERVICE_URI + PathConst.PATH_TICKET_QUERY_ICBC + "/" + ticketNumber;
-
-		EnumInterface ICBC_QT = EnumInterface.ICBC_QT;
-
+        String url = ICBC_PAYMENT_SERVICE_URI + PathConst.PATH_TICKET_QUERY_ICBC + "/" + ticketNumber;
 		log.debug("Send ticket query [ticket number: {}, contraventionNumber: {}, time: {}] to ICBC: {}", ticketNumber, contraventionNumber, time, url);
 
 		ResponseEntity<String> response;
@@ -207,7 +157,7 @@ public class PaymentRestController extends BaseController {
 			// If the errorCode is 404, return 'ticket not found' response
 			if (responseCode == HttpStatus.NOT_FOUND) {
 				log.debug("Ticket not found");
-				return new ResponseEntity<> (getPaybcPaymentMessage(ICBC_PAYMENT_MESSAGE_CODE_TICKET_NO_FOUND), HttpStatus.OK);
+				return new ResponseEntity<> (getPaymentMessage(Const.ICBC_PAYMENT_MESSAGE_CODE_TICKET_NO_FOUND), HttpStatus.OK);
 			}
 
 			// only raise an error if it's client exception (except 404 which is used by ICBC for ticket not found)
@@ -215,22 +165,13 @@ public class PaymentRestController extends BaseController {
 				errorDetails = "Exception occurred while sending ticket query to " + url + ", exception details: " + e.toString() + "; " + e.getMessage();
 				errorService.saveError(contraventionNumber, ticketNumber, EnumErrorCode.Q00, PAYMENT_CONTROLLER_ICBC_INVOICE_SEARCH_HELPER, errorDetails, null, null, null, null, true);
 			}
-			return new ResponseEntity<> (getPaybcPaymentMessage(ICBC_PAYMENT_MESSAGE_CODE_SYSTEM_ERROR), HttpStatus.SERVICE_UNAVAILABLE);
+			return new ResponseEntity<> (getPaymentMessage(Const.ICBC_PAYMENT_MESSAGE_CODE_SYSTEM_ERROR), HttpStatus.SERVICE_UNAVAILABLE);
 		}
 
         assert response != null;
         responseCode = response.getStatusCode();
 		//success, process the response from ICBC
 		if (HttpStatus.OK == responseCode || HttpStatus.CREATED == responseCode) {
-			//update ICBC_QT interfaces to RUNNING
-			try {
-				etkService.UpdateInterface(ICBC_QT, EnumInterfaceState.RUNNING, Const.CONST_JH_ETK);
-			} catch (EtkDataAccessException e) {
-				errorDetails = "Failed to update ICBC_QT to RUNNING; error details: " + e.toString() + "; " + e.getMessage();
-    			log.error(errorDetails);
-    			errorService.saveError(contraventionNumber, ticketNumber, EnumErrorCode.Q00, PAYMENT_CONTROLLER_ICBC_INVOICE_SEARCH_HELPER, errorDetails, null, null, null, null, true);
-			}
-
 			InvoiceSearchResponse_ICBC_MCOT icbcResponse = null;
 	        if (StringUtils.isNotBlank(response.getBody())) {
             	log.debug("Ticket query to ICBC succeeded: {}", response.getBody());
@@ -248,23 +189,19 @@ public class PaymentRestController extends BaseController {
 	        // ICBC returns 200 or 201 statusCode, but with empty body, do the following:
 	        // 1. Return 'Ticket not found' error
 	        if (icbcResponse == null) {
-	        	responseString = getPaybcPaymentMessage(ICBC_PAYMENT_MESSAGE_CODE_TICKET_NO_FOUND);
+	        	responseString = getPaymentMessage(Const.ICBC_PAYMENT_MESSAGE_CODE_TICKET_NO_FOUND);
 	        	return new ResponseEntity<> (responseString, HttpStatus.OK);
 	        }
 
-	        boolean timeMatch = false;
-	        //if doing individual invoice search or ticket search and time provided match what ICBC returns, match true to timeMatch
-	        if (time == null || DateUtil.compareViolationTime(icbcResponse.getViolationDate(), time)) {
-	        	timeMatch = true;
-	        }
-
-			log.debug("ICBC response violation date: {}", icbcResponse.getViolationDate());
+			//if doing individual invoice search or ticket search and time provided match what ICBC returns, match true to timeMatch
+	        boolean timeMatch = time == null || DateUtil.compareViolationTime(icbcResponse.getViolationDate(), time);
+            log.debug("ICBC response violation date: {}", icbcResponse.getViolationDate());
 
 	        if (timeMatch) {
 	        	// individual invoice search
 	        	if (individualInvoiceSearch) {
 	        		//loop through the list of ICBC returned Contraventions,
-	        		//find the one where the contravention number matches the passed incontraventionNumber,
+	        		//find the one where the contravention number matches the passed in contraventionNumber,
 	        		//and map it to InvoiceSearchResponse_ICBC object
 	        		InvoiceSearchResponse_ICBC returnResponse = null;
 	        		for (Contravention contravention : icbcResponse.getContraventions()) {
@@ -276,15 +213,15 @@ public class PaymentRestController extends BaseController {
 	        		}
 	        		// contravention not found, prepare ticket not found response
 	        		if (returnResponse == null) {
-	        			responseString = getPaybcPaymentMessage(ICBC_PAYMENT_MESSAGE_CODE_TICKET_NO_FOUND);
+	        			responseString = getPaymentMessage(Const.ICBC_PAYMENT_MESSAGE_CODE_TICKET_NO_FOUND);
 	        		}
 	        	// invoice search
 	        	} else {
 	        		//save a query event to db
 	        		try {
 	        			etkService.RecordQueryEvent(ticketNumber);
-	        		} catch (EtkDataAccessException e) {
-	        			errorDetails = "Exception occurred while record query event, details: " + e.toString() + "; " + e.getMessage();
+	        		} catch (Exception e) {
+	        			errorDetails = "Exception occurred while record query event, details: " + e.getMessage() + "; " + e.toString();
 	        			log.error(errorDetails);
 	        			errorService.saveError(contraventionNumber, ticketNumber, EnumErrorCode.Q21, PAYMENT_CONTROLLER_ICBC_INVOICE_SEARCH_HELPER, errorDetails, null, null, null, null, true);
 	        		}
@@ -300,7 +237,6 @@ public class PaymentRestController extends BaseController {
 	        				found100 = true;
 	        				Item tmpItem = new Item();
 	        				keyValue kv = new keyValue();
-	        				// kv.set$ref(PAYBC_INDIVIDUAL_INVOICE_ENDPOINT_URL_PREFIX + PathConst.PATH_INDIVIDUAL_TICKET_QUERY + "/" + contravention.getContraventionNumber());
 							kv.set$ref(PAYBC_INDIVIDUAL_INVOICE_ENDPOINT_URL_PREFIX + PathConst.PATH_INDIVIDUAL_TICKET_QUERY_V2 + "/" + contravention.getContraventionNumber());
 	        				tmpItem.setSelected_invoice(kv);
 	        				tmpItems.add(tmpItem);
@@ -320,45 +256,34 @@ public class PaymentRestController extends BaseController {
 	        			responseString = StringUtil.objectToJsonString(items);
 	        		// all the contraventions in the ticket are in the zero outstanding status (102),
 	        		// Hub returns "No payment required for this traffic violation ticket." to PayBC
-	        		} else if (!found100 && !found103 && found102) {
-	        			responseString = getPaybcPaymentMessage(ICBC_PAYMENT_MESSAGE_CODE_ZERO_OUTSTANDING);
+	        		} else if (!found103 && found102) {
+	        			responseString = getPaymentMessage(Const.ICBC_PAYMENT_MESSAGE_CODE_ZERO_OUTSTANDING);
 	        		// all the contraventions in the ticket are either in 103 or 102.
 	        		// If at least one of the contraventions is 103, Hub returns "the ticket not payable message" to PayBC.
-	        		} else if (!found100 && found103) {
-	        			responseString = getPaybcPaymentMessage(ICBC_PAYMENT_MESSAGE_CODE_TICKET_NOT_PAYABLE);
+	        		} else if (found103) {
+	        			responseString = getPaymentMessage(Const.ICBC_PAYMENT_MESSAGE_CODE_TICKET_NOT_PAYABLE);
 	        		// unexpected statusCode combination, log it, and return service not available message back to paybc
 	        		} else {
 	        			log.error("Cannot derive message for paybc, unexpected statusCode combination: found 100: {}; found 102: {}; found 103: {}", found100, found102, found103);
-	        			responseString = getPaybcPaymentMessage(ICBC_PAYMENT_MESSAGE_CODE_SYSTEM_ERROR);
+	        			responseString = getPaymentMessage(Const.ICBC_PAYMENT_MESSAGE_CODE_SYSTEM_ERROR);
 	        		}
 	        		log.debug("Found 100: {}; found 102: {}; found 103: {}. Ticket query returns: {}", found100, found102, found103, responseString);
 	        	}
 	        } else {
 	        	// time doesn't match, prepare ticket not found response
-				responseString = getPaybcPaymentMessage(ICBC_PAYMENT_MESSAGE_CODE_TICKET_NO_FOUND);
+				responseString = getPaymentMessage(Const.ICBC_PAYMENT_MESSAGE_CODE_TICKET_NO_FOUND);
 	        }
 		} else {
 			// bad response...
-            log.error("Ticket query to ICBC failed, status: {}, response: {}", response.getStatusCode(), response.getBody());
-			log.debug("Service not available error");
+            log.error("Ticket query to ICBC failed, ticket: {}, status: {}, response: {}", ticketNumber, response.getStatusCode(), response.getBody());
 
 			//prepare response
-			responseString = getPaybcPaymentMessage(ICBC_PAYMENT_MESSAGE_CODE_SYSTEM_ERROR);
-
-			//update ICBC_QT interfaces to FAILED
-			try {
-				etkService.UpdateInterface(ICBC_QT, EnumInterfaceState.FAILED, Const.CONST_JH_ETK);
-			} catch (EtkDataAccessException e) {
-				errorDetails = "Failed to update ICBC_QT to FAILED; error details: " + e.toString() + "; " + e.getMessage();
-    			log.error(errorDetails);
-    			errorService.saveError(contraventionNumber, ticketNumber, EnumErrorCode.Q00, PAYMENT_CONTROLLER_ICBC_INVOICE_SEARCH_HELPER, errorDetails, null, null, null, null, true);
-			}
+			responseString = getPaymentMessage(Const.ICBC_PAYMENT_MESSAGE_CODE_SYSTEM_ERROR);
 
 			//error handling
 			log.error("Error occurred while doing ticket query to ICBC");
 			errorDetails = String.format("HTTP status: %s \r\n HTTP Body: %s", response.getStatusCode().value(), response.getBody());
 			errorService.saveError(contraventionNumber, ticketNumber, EnumErrorCode.Q11, PAYMENT_CONTROLLER_ICBC_INVOICE_SEARCH_HELPER, errorDetails, null, null, null, null, true);
-
 		}
 		return new ResponseEntity<> (responseString, responseCode);
 	}
@@ -381,9 +306,9 @@ public class PaymentRestController extends BaseController {
 			return icbcInvoiceSearchHelper(ticketNum, contraventionNum, time, individualInvoiceSearch);
 		} catch (ResourceAccessException e) {
 			//ICBC is not available, don't raise a Hub error; let PayBC automatically retry.
-			errorDetails = "Cannot reach " + ICBC_PAYMENT_SERVICE_URI + PathConst.PATH_TICKET_QUERY_ICBC + "/" + ticketNum + ". Exception details: " + e.toString() + "; " + e.getMessage();;
+			errorDetails = "Cannot reach " + ICBC_PAYMENT_SERVICE_URI + PathConst.PATH_TICKET_QUERY_ICBC + "/" + ticketNum + ". Exception details: " + e.getMessage() + "; " + e.toString();
 		} catch (HttpStatusCodeException e) {
-			errorDetails = "Exception occurred while querying ticket to icbcadapter, httpStatusCode: " + e.getStatusCode().value() + "; details: " + e.toString() + "; " + e.getMessage();
+			errorDetails = "Exception occurred while querying ticket in ICBC svc, httpStatusCode: " + e.getStatusCode().value() + "; details: " + e.getMessage() + "; " + e.toString();
 			// proper http status code returned
 			// if the exception is an instance of HttpClientErrorException, raise an error;
 			// otherwise, don't raise any error
@@ -392,25 +317,18 @@ public class PaymentRestController extends BaseController {
 			}
 		} catch (UnknownHttpStatusCodeException e) {
 			// unknown http status code returned; raise a general error
-			errorDetails = "UnknownHttpStatusCodeException occurred while querying ticket to icbcadapter: " +  e.toString() + "; " + e.getMessage();
+			errorDetails = "UnknownHttpStatusCodeException occurred while querying ticket using ICBC svc: " +  e.getMessage() + "; " + e.toString();
 			errorCode = EnumErrorCode.Q00;
 		} finally {
 			if (errorDetails != null) {
-		    	log.error(errorDetails);
-		    	try {
-					etkService.UpdateInterface(EnumInterface.ICBC_QT, EnumInterfaceState.FAILED, Const.CONST_JH_ETK);
-				} catch (Exception e) {
-					String error = "DB exception occurred while changing ICBC_QT to FAILED, details: " + e.toString() + "; " + e.getMessage();
-					log.error(error);
-					errorService.saveError(contraventionNum, ticketNum, EnumErrorCode.Q00, "PaymentController.ticketQueryWrapper", error, null, null, null, null, true);
-				}
+                log.error("Ticket number: {} error: {}", ticketNum, errorDetails);
 		    }
 		    if (errorCode != null) {
 		    	errorService.saveError(contraventionNum, ticketNum, errorCode, errorSource, errorDetails, null, null, null, null, true);
 		    }
 		}
 
-		return new ResponseEntity<> (getPaybcPaymentMessage(ICBC_PAYMENT_MESSAGE_CODE_SYSTEM_ERROR), HttpStatus.SERVICE_UNAVAILABLE);
+		return new ResponseEntity<> (getPaymentMessage(Const.ICBC_PAYMENT_MESSAGE_CODE_SYSTEM_ERROR), HttpStatus.SERVICE_UNAVAILABLE);
 	}
 
 	/**
@@ -491,16 +409,8 @@ public class PaymentRestController extends BaseController {
 	 * @param icbcPaymentMessageCode the icbc payment message code
 	 * @return the paybc payment message
 	 */
-	private String getPaybcPaymentMessage (final String icbcPaymentMessageCode) {
-		// time doesn't match, prepare ticket not found response
-		try {
-			Map<String, String> paymentCodeMap = etkService.GetIcbcPaymentCode(icbcPaymentMessageCode);
-			String message = paymentCodeMap.get(Const.KEY_PAYMENT_MESSAGE_DSC);
-			return String.format("{\"error\": \"%s\"}", message);
-		} catch (EtkDataAccessException e) {
-			log.error("Fail to get ICBC payment code[{}], error: {}", icbcPaymentMessageCode, e.getMessage());
-		}
-		return null;
+	private String getPaymentMessage(final String icbcPaymentMessageCode) {
+		return etkService.GetPaymentMessage(icbcPaymentMessageCode);
 	}
 
 	/**
